[tool.poetry]
name = "pyakeneo"
version = "0.1.0"
description = "Python client for the Akeneo API REST"
authors = ["Kave Tech <kavetech@kavehome.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.2"
structlog = "^22.3.0"


[tool.poetry.group.dev.dependencies]
nose = "^1.3.7"
vcrpy = "^4.2.1"
sphinx = "1.6.5"
vcrpy-unittest = "^0.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
