[project]
name = "pyakeneo"
version = "1.0.0"
description = "Python client for the Akeneo API REST"
authors = [{name = "Kave Tech", email = "kavetech@kavehome.com"}]
readme = "README.rst"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28.2,<3.0.0",
    "structlog>=22.3.0,<23.0.0",
]

[project.urls]
homepage = "https://github.com/KaveTech/akeneo_api_client"

[tool.poetry]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "vcrpy>=4.2.1,<5.0.0",
    "sphinx==1.6.5",
    "vcrpy-unittest>=0.1.7,<1.0.0",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
